implement database userdetailsservice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 
 server.port=8088
 
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.name=testDb
+#spring.datasource.name=testDb
 
 debug=true
